LCC_Integrated/LCC_Frontend/lcc/infra/k8s/base/browser-extension-cdn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser-extension-cdn
  namespace: lcc
spec:
  selector:
    app.kubernetes.io/name: browser-extension-cdn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
